# Eye-Witness

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MISSINGMORE  Makefile  ObservableStructure.md  README.md  SECURITY.md  VERIFY.md  deploy-to-eye-witness.ps1  docker-compose.observability.yml  mypy.ini  open telemetry.md  pyproject.toml  pyproject.toml.backup  requirements.lock.txt  requirements.txt  restore_report.json  ruff.toml  run_fastapi.py  setup-observability.ps1  structlog_config.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  nightly.yml  publish.yml  python-ci.yml
docker/integration/: docker-compose.test.yml
docker/matrix/: Dockerfile  README.md
docs/: COMPATIBILITY.md  DEPRECATION.md  LOCAL_STACK.md  MATRIX.md  MIGRATION.md  TROUBLESHOOTING.md  architecture.md  opentelemetry.md  otel-collector-config.yaml
docs/_incoming_root/: eye-witness-handoff.md
docs/api/: auto-generated.md  changelog-policy.md  v1.md
docs/guides/: local-stack.md  migration.md  performance.md  troubleshooting.md
docs/operations/: redaction-policy.md  runbooks.md  sampling-strategies.md
examples/: README.md  cli_demo.py  integrations_demo.py
examples/celery_worker/: README.md  worker.py
examples/django_app/: README.md  settings_snippet.py
examples/fastapi_app/: README.md  main.py
examples/flask_app/: README.md  app.py
functions/: README.md  requirements-structlog.txt  structlog_demo.py
observability/: README.md  integration_demo.py
observability/error_tracking/: README.md  breadcrumbs.py  cli.py  context.py
observability/logging/: README.md  config.py  demo.py  processors.py
observability/tracing/: README.md  log_correlation.py  newrelic.py  newrelic_demo.py  propagation.py  provider.py  sampling.py  spans.py
scripts/: README.md  benchmark_logging.py  benchmark_metrics.py  benchmark_tracing.py  bootstrap-telemetry.ps1  check_api_parity.py  generate_api_docs.py  migrate_v1_api.py  refresh_lockfile.py  release_check.py  run_docker_matrix.ps1  smoke_test.py
src/eye_witness/: README.md  __init__.py  _compat.py  _config.py  _context.py  _init.py  _logging.py  _metrics.py  _sentry.py  _tracing.py
src/eye_witness/integrations/: README.md  __init__.py  celery.py  django.py  fastapi.py  flask.py
src/eye_witness/internal/: README.md  __init__.py  lifecycle.py  schema.py  serializers.py  util.py
src/eye_witness/v1/: README.md  __init__.py
tests/: README.md  conftest.py  test_api_versioning.py  test_contract_wheel.py  test_eye_witness.py  test_migration_tool.py  test_snapshots.py  test_stress.py
tests/contract/: README.md  test_api_contract.py
tests/integration/: README.md  test_framework_examples.py
tests/perf/: README.md  test_logging_perf.py  test_metrics_perf.py  test_tracing_perf.py
tests/snapshots/: log_schema_keys.json  metrics_schema_keys.json  trace_schema_keys.json
tests/stress/: README.md  test_concurrency.py  test_volume.py
tests/unit/: README.md  test_api_parity.py  test_internal.py
