[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eye-witness"
version = "0.1.0"
description = "Unified observability for Python — structlog + Sentry + OpenTelemetry in one call."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eye-Witness Contributors" },
]
keywords = ["logging", "observability", "tracing", "sentry", "opentelemetry", "structlog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "structlog>=24.0.0",
    "sentry-sdk>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    # Core for auto-instrumentation (from New Relic guide)
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-instrumentation>=0.59b0",
]

[project.optional-dependencies]
otlp-http = [
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
otlp-grpc = ["opentelemetry-exporter-otlp-proto-grpc>=1.20.0"]
otlp = ["opentelemetry-exporter-otlp>=1.20.0"]
fast = ["orjson>=3.9.0"]

# Auto-instrumentation extra (populate from bootstrap output)
# Run: uv run opentelemetry-bootstrap -a requirements > otel-reqs.txt
# Then paste discovered packages here.
telemetry = [
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-instrumentation>=0.59b0",
    # After running bootstrap, add lines like:
    # "opentelemetry-instrumentation-flask==0.47b0",
    # "opentelemetry-instrumentation-requests==0.47b0",
    # "opentelemetry-instrumentation-logging==0.47b0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "build>=1.2.2",
    "rich>=13.0",
]
all = [
    "eye-witness[otlp-http,telemetry,fast,dev]",
]

[project.urls]
Homepage = "https://github.com/eye-witness/eye-witness"
Documentation = "https://github.com/eye-witness/eye-witness#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/eye_witness"]
include = ["src/eye_witness/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".cache/pytest"
markers = [
    "contract: wheel-install contract tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "_archive",
    "observability",
    "functions",
    "structlog_config.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
mypy_path = "src"
ignore_missing_imports = true
exclude = [
    "_archive/",
    "observability/",
    "functions/",
    "structlog_config.py",
]
