[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-witness"
version = "0.1.0"
description = "Unified observability for Python: structlog, Sentry, and OpenTelemetry."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Michael Rawls Jr" }
]
keywords = ["observability", "logging", "tracing", "sentry", "opentelemetry", "structlog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "structlog>=24.1.0,<25.0",
  "sentry-sdk>=2.0.0,<3.0",
  "opentelemetry-api>=1.24.0,<2.0",
  "opentelemetry-sdk>=1.24.0,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.24.0,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.41.0,<2.0",
  "fastapi>=0.135.1,<1.0",
  "uvicorn>=0.43.0,<1.0",
]

[project.optional-dependencies]
speed = [
  "orjson>=3.9.0,<4.0",
]
integrations = [
  "fastapi>=0.110.0,<1.0",
  "flask>=3.0.0,<4.0",
  "django>=4.2.0,<6.0",
  "celery>=5.3.0,<6.0",
]
all = [
  "orjson>=3.9.0,<4.0",
  "fastapi>=0.110.0,<1.0",
  "flask>=3.0.0,<4.0",
  "django>=4.2.0,<6.0",
  "celery>=5.3.0,<6.0",
]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0.0,<8.0",
  "build>=1.2.0,<2.0",
  "ruff>=0.15.11,<1.0",
  "mypy>=1.10.0,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eye_witness = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "contract: contract-level packaging and public API checks",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true
pretty = true
